# dshield-coordination-engine

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  enhancements.md  env.example  pyproject.toml
.cursor/rules/: docker.mdc  langchain.mdc  langgraph.mdc  pytest.mdc  python.mdc
.github/: SECURITY.md
.github/workflows/: ci.yml
agents/: __init__.py  base.py
docker/: Dockerfile.api  Dockerfile.worker  Dockerfile.workflow
docs/: api_documentation.md  api_usage_examples.md  container_architecture.md  database_design_and_workflow.md  development_guidelines.md  issue_3_task_list.md  langgraph_coordination_architecture.md  prd.md  test_suite_implementation.md
requirements/: base.txt  dev.txt
scripts/: local_ci.sh  setup_dev.py
services/: __init__.py
services/api/: __init__.py  auth.py  config.py  main.py
services/api/routers/: coordination.py  health.py
services/database/: __init__.py  cache.py  campaign_tracking.py  connection.py  rate_limiting.py  redis_client.py  workflow_state.py
services/llm/: __init__.py  client.py  models.py  prompts.py
services/workers/: __init__.py  celery_app.py  tasks.py
services/workflow/: __init__.py  agents.py  graph.py  state.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_integration.py
tests/security/: test_security_validation.py
tests/unit/: test_agents_base.py  test_api_auth.py  test_api_config.py  test_api_coordination.py  test_api_health.py  test_llm_service.py  test_tools_base.py  test_workflow_service.py
tools/: __init__.py  base.py
